[gd_scene load_steps=4 format=2]

[ext_resource path="res://panels/ListDialog.gd" type="Script" id=1]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
    vec3 c = textureLod(SCREEN_TEXTURE, SCREEN_UV, 0.0).rgb;
	if (c.r < 0.3 || c.g < 0.3 || c.b < 0.3) c *= 1.2;
    COLOR.rgb = c;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="ListDialog" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -896.0
margin_bottom = -523.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="sc" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="sc"]
margin_right = 384.0
margin_bottom = 277.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/guide_color = Color( 0.270588, 0.270588, 0.270588, 1 )
custom_colors/font_color = Color( 0.847059, 0.847059, 0.847059, 1 )
custom_constants/vseparation = 5

[node name="Bar" type="ColorRect" parent="."]
material = SubResource( 2 )
margin_right = 249.0
margin_bottom = 35.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="sc" to="." method="_on_sc_mouse_entered"]
[connection signal="mouse_exited" from="sc" to="." method="_on_sc_mouse_exited"]
[connection signal="gui_input" from="sc/ItemList" to="." method="_on_ItemList_gui_input"]
[connection signal="item_selected" from="sc/ItemList" to="." method="_on_ItemList_item_selected"]
